--- a/_includes/pubs_patent.html
+++ b/_includes/pubs_patent.html
@@ -44,5 +44,27 @@
 			</span>
 		</td>
 	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2018</strong></big><br />
+				
+				November
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				一种融合图数据库和人工智能算法的数据管理系统.
+			</span><br />
+			<span class="authors">
+				沈志宏, 赵子豪, 周园春, and 杜一.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">中国专利</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
 </tbody>
 </table>
