add new project and paper

--- a/_includes/pubs_conference.html
+++ b/_includes/pubs_conference.html
@@ -44,5 +44,27 @@
 			</span>
 		</td>
 	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2018</strong></big><br />
+				
+				January
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				You Are How You Drive: Peer and Temporal-Aware Representation Learning for Driving Behavior Analysis.
+			</span><br />
+			<span class="authors">
+				Pengyang Wang, Yanjie Fu, Jiawei Zhang, Pengfei Wang, Yu Zheng, and Charu C. Aggarwal.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery & Data Mining (KDD 2018)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
 </tbody>
 </table>
