--- a/_includes/pubs_journal.html
+++ b/_includes/pubs_journal.html
@@ -240,5 +240,27 @@
 			</span>
 		</td>
 	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2017</strong></big><br />
+				
+				January
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				Spotting Trip Purposes from Taxi Trajectories: A General Probabilistic Model.
+			</span><br />
+			<span class="authors">
+				Pengfei Wang, Guannan Liu, Yanjie Fu, Yuanchun Zhou, and Jianhui Li.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">ACM Transactions on Intelligent Systems and Technology 9(3)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
 </tbody>
 </table>
