--- a/_includes/pubs_journal.html
+++ b/_includes/pubs_journal.html
@@ -6,6 +6,30 @@
 				
 				<big><strong>2019</strong></big><br />
 				
+				August
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				<img src="img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://www.mdpi.com/2073-4433/10/8/461">Spatiotemporal Trend Analysis of PM2.5 Concentration in China, 1999–2016</a>.
+			</span><br />
+			<span class="authors">
+				Jianghua Zhao, Xuezhi Wang, Hongqing Song, Yi Du, Wenjuan Cui, and Yuanchun Zhou.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Atmosphere 10(8)</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2019</strong></big><br />
+				
 				January
 			</span>
 		</td>
