--- a/_includes/pubs_patent.html
+++ b/_includes/pubs_patent.html
@@ -4,6 +4,28 @@
 		<td>
 			<span class="date">
 				
+				<big><strong>2019</strong></big><br />
+				
+				November
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				一种基于异质图卷积神经网络嵌入的作者名字消歧方法.
+			</span><br />
+			<span class="authors">
+				杜一, 乔子越, and 周园春.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">中国专利</span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
 				<big><strong>2018</strong></big><br />
 				
 				November
